Fixed gift section on tablet and mobile

--- a/resources/scss/home.scss
+++ b/resources/scss/home.scss
@@ -952,7 +952,7 @@
     align-items: center;
     @media (max-width: $mobile) {
       flex-direction: column;
-      align-items: flex-start;
+      align-items: center;
       padding-top: 24px;
       padding-bottom: 24px;
     }
@@ -964,10 +964,13 @@
     @include adaptiveValueREM('margin-left', 80, 24, 1240, 992, 1);
     @include adaptiveValueREM('margin-right', 120, 24, 1240, 992, 1);
     @media (max-width: $mobile) {
-      margin-bottom: 24px;
-    }
-    @media (max-width: $mobile) {
       flex-direction: column;
+      align-items: center;
+      margin-bottom: 24px;
+      width: 100%;
+      margin-left: 0;
+      margin-right: 0;
+      padding: 0 15px;
     }
   }
 
@@ -980,6 +983,7 @@
 
   &__text {
     max-width: 610px;
+    flex: 1 1 auto;
     @media (max-width: $mobile) {
       order: 1;
       margin-bottom: 24px;
@@ -1004,9 +1008,13 @@
     font-weight: 500;
     line-height: 150%;
     max-width: 570px;
+    @media (max-width: $tablet) {
+      max-width: 570px;
+    }
   }
 
   &__btn {
+    flex: 0 0 auto;
     display: inline-block;
     position: relative;
     overflow: hidden;
@@ -1030,7 +1038,7 @@
     }
     @media (max-width: $mobile) {
       display: block;
-      margin: 0 auto;
+      //margin: 0 auto;
     }
   }
 }
